concord_macros/tests/dsl/fail/fail_rate_limit_empty_block_endpoint.stderr
error: empty rate_limit block has no effect
  --> tests/dsl/fail/fail_rate_limit_empty_block_endpoint.rs:10:21
   |
10 |         rate_limit {}
   |                     ^
